crates/bin/cairo-metrics/benchmarks/openzeppelin/project/packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_governor_settings_no_initializer.snap
---
source: src/tests/test_with_components.rs
expression: result
snapshot_kind: text
---
TokenStream:

#[starknet::contract]
pub mod MyContract {
    #[storage]
    pub struct Storage {
        #[substorage(v0)]
        pub governor_settings: GovernorSettingsComponent::Storage,
    }

    #[constructor]
    fn constructor(ref self: ContractState) {}
    use openzeppelin_governance::governor::extensions::GovernorSettingsComponent;

    component!(
        path: GovernorSettingsComponent, storage: governor_settings, event: GovernorSettingsEvent,
    );

    impl GovernorSettingsInternalImpl = GovernorSettingsComponent::InternalImpl<ContractState>;
    impl GovernorSettingsGovernorSettings =
        GovernorSettingsComponent::GovernorSettings<ContractState>;

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        GovernorSettingsEvent: GovernorSettingsComponent::Event,
    }
}


Diagnostics:

====
Warning: It looks like the initializers for the following components are missing:

GovernorSettings

This may lead to unexpected behavior.
We recommend adding the corresponding initializer calls to the constructor.
====

AuxData:

None
